tests/golden/type_errors/for_in_break_inside_function.cd
for x in [1] {
  fun f() {
    break;
  }
}
